--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+<html lang="nl">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Alles over de geschiedenis, feitjes en impact van de computermuis">
+    <meta property="og:url" content="https://themazeisamazing.github.io/TechniekFilo1Website/" />
+    <meta property="og:title" content="De computermuis" />
+    <meta property="og:description" content="Alles over de geschiedenis, feitjes en impact van de computermui" />
+    <meta property="og:image" content="https://hr-cmgt.github.io/alankay-dynabook/images/alankay.jpg" />
+    <title>De Compurermuis</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <h1> De computermuis <h1/>
 Iedereen kent en gebruikt het bijna dagelijks: een computermuis. Een naar de hand gevormd object dat een cursor laat bewegen op je beeldscherm.
 Dit was echter niet altijd zo, de eerste computers werkte alleen met een toetsenbord. De muis kwam pas later. 
