--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Alles over de geschiedenis, feitjes en impact van de computermui" />
     <meta property="og:image" content="https://hr-cmgt.github.io/alankay-dynabook/images/alankay.jpg" />
     <title>De Compurermuis</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://github.com/TheMazeIsAmazing/TechniekFilo1Website/blob/main/style.css">
 </head>
 
 <h1> De computermuis <h1/>
