--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Alles over de geschiedenis, feitjes en impact van de computermui" />
     <meta property="og:image" content="https://hr-cmgt.github.io/alankay-dynabook/images/alankay.jpg" />
     <title>De Computermuis</title>
-    <link rel="stylesheet" href="https://github.com/TheMazeIsAmazing/TechniekFilo1Website/raw/main/style.css">
+    <link rel="stylesheet" href="./main/style.css">
     <script defer src="./js/script.js"></script>
 </head>
 
