--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="https://hr-cmgt.github.io/alankay-dynabook/images/alankay.jpg" />
     <title>De Computermuis</title>
     <link rel="stylesheet" href="./style.css">
-    <script defer src="./js/script.js"></script>
+    <script defer src="./script.js"></script>
 </head>
 
 <body>
