--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Dat wilde ik ook doen met mijn product: ik wilde dat mijn apparaatje in een oogw
 
 
         </section>
-      section class="blue" id="conclusie">
+      <section class="blue" id="conclusie">
             <h2>Conclusie</h2>
         </section>
 
