--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
           <img class="wide" src="https://github.com/TheMazeIsAmazing/TechniekFilo1Website/raw/main/data/WhatsApp%20Image%202021-09-29%20at%2010.18.46%20(2).jpeg">
             <p>De link die ik in dit geval wil leggen tussen de mensen hoeveelheidscheck-o-meter 3000, het product dat tik heb gemaakt voor Pitch Perfect in CLE, en de computermuis is dat we technologie toegankelijk maken voor iedereen.  Dit is namelijk omdat toen Douglas Engelbart zijn product liet testen bij NASA was het meteen makkelijk te gebruiken voor mensen die deze ‘bug’ voor het eerst zagen. Hij had dus de technologie van zijn voorgangers zo gemakkelijk gemaakt dat men het meteen het zonder erover na te denken kon gebruiken. <br>
 Dat wilde ik ook doen met mijn product: ik wilde dat mijn apparaatje in een oogwenk kan laten zien aan de medewerkers hoeveel mensen er binnenkomen. Dit heb ik gedaan door de lampjes oranje of rood te laten kleuren als er meer dan een bepaald aantal mensen binnenkomt. Op deze manier zal de mensen hoeveelheidscheck-o-meter 3000, als het een tijdje in het restaurant staat, zonder erover na te denken gebruikt worden bij het bijvullen zodat men weet hoeveel mensen er binnen komen en dus weten of het bijvullen wel handig is.
-
+  <figcaption>Afbeelding 3: De mensen hoeveelheidscheck-o-meter 3000, mijn product van sprint 2 CLE
+                </figcaption>
 
         </section>
       <section class="blue" id="conclusie">
